force-app/main/default/objects/Pramata_Contracts_EDW__c/Pramata_Contracts_EDW__c.object-meta.xml
<CustomObject>
    <description>Pramata Contract EDW Object</description>
    <label>Pramata Contracts EDW</label>
    <nameField>
        <label>Pramata Contracts EDW Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pramata_Contracts_EDW</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>