force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Account_Master_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Master_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Master Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pramata_Contracts_EDW</relationshipLabel>
    <relationshipName>Pramata_Contracts_EDW</relationshipName>
    <type>Lookup</type>
</CustomField>