force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Country_Code_with_Master_Customer_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_with_Master_Customer_Nbr__c</fullName>
    <label>Country Code with Master Customer Nbr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>