force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Pramata_Agg_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pramata_Agg_End_Date__c</fullName>
    <description>Aggregate End Date of Pramata Contract EDW</description>
    <label>Agg End Date</label>
    <type>Date</type>
</CustomField>