force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Pramata_Agg_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pramata_Agg_Start_Date__c</fullName>
    <description>Aggregate Start Date</description>
    <label>Agg Start Date</label>
    <type>Date</type>
</CustomField>