force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Pramata_Agg_Term_Type__c.field-meta.xml
<CustomField>
    <fullName>Pramata_Agg_Term_Type__c</fullName>
    <description>Term Type</description>
    <label>Agg Term Type</label>
    <type>TextArea</type>
</CustomField>