force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Pramata_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Pramata_Contract_Status__c</fullName>
    <label>Contract Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>