force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Pramata_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Pramata_Nbr__c</fullName>
    <label>Pramata Nbr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>