force-app/main/default/objects/Pramata_Contracts_EDW__c/fields/Pramata_Term_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Pramata_Term_Effective_Date__c</fullName>
    <label>Term Effective Date</label>
    <type>Date</type>
</CustomField>